test/samples/invalid/if_updated_length.invalid.sol
pragma solidity ^0.5.0;

contract LengthAssigned {
	//// if_updated true;
	uint[] a;
	function main() public {
		a.length = 1;
	}
}
